# makina-old

./: .gitignore  CMakeLists.txt  getdlls.py  readme.md
data/model/nightsaber/: nightsaber.fbx
data/model/setesh/: setesh.fbx  setesh.mtl
data/shader/glsl/: default.vert  pbr.frag  phong.frag  ui.frag  ui.vert
examples/simple/: CMakeLists.txt
examples/simple/source/: main.cpp
utility/CsGenerator/: CsGenerator.sln
utility/CsGenerator/CsGenerator/: CsGenerator.csproj  Program.cs  packages.config
utility/CsGenerator/CsGenerator/Properties/: AssemblyInfo.cs
utility/conan/bgfx/: conanfile.py
utility/conan/cxxopts/: conanfile.py
utility/conan/hdf5/: conanfile.py
utility/conan/highfive/: conanfile.py
utility/conan/im3d/: conanfile.py
utility/conan/imgui/: conanfile.py
utility/conan/memory/: conanfile.py
utility/conan/openvr/: conanfile.py
utility/conan/ospray/: conanfile.py
utility/conan/parallelstl/: conanfile.py
utility/conan/rttr/: conanfile.py
utility/conan/sdl2/: CMakeLists.txt  conanfile.py
utility/conan/splinter/: conanfile.py
utility/conan/uwebsockets/: conanfile.py
utility/conan/vkhlf/: conanfile.py
